samples/_failures_safe/1761414842_03b523_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8cc7700e.c: In function ‘tokenize’:
./samples/SAFE/__tmp_8cc7700e.c:159:9: error: expected expression at end of input
  159 |         tokens[token_count].line =
      |         ^~~~~~
./samples/SAFE/__tmp_8cc7700e.c:159:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8cc7700e.c:159:9: error: expected declaration or statement at end of input
